--- a/sites/uncategorized/source/blog/blog-posts/2022-11-01-new-openssl-30-vulnerabilities-what-you-need-to-know-to-find-and-fix-them.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-01-new-openssl-30-vulnerabilities-what-you-need-to-know-to-find-and-fix-them.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "New OpenSSL 3.0 vulnerabilities: What you need to know to find and fix them"
-author: ""
+author: "GitLab Security Team"
 categories: security
 tags: security, open source, news
 description: Learn how to identify your risk for CVE-2022-3786 and CVE-2022-3602.
