Breaking Changes that fix a security issue are ok in minor releases

--- a/sites/handbook/source/handbook/product/gitlab-the-product/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/gitlab-the-product/index.html.md.erb
@@ -153,7 +153,7 @@ If you are introducing a breaking change, you must notify the user community and
 
 #### Is this a breaking change?
 
-If the answer is yes to any of the following questions, the change is to be considered a breaking change and should only be introduced in a major version.
+If the answer is yes to any of the following questions, the change is to be considered a breaking change and should only be introduced in a major version (unless it is a security fix).
 
 - Does this change require an action from the customer to ensure continuity of function? (For example, removing background upload for object storage meant users needed to migrate objects to a supported object storage provider)
 - Does this change cause a disruption to a customer's workflows or tasks? (For example, removing support for the "WIP" prefix in MRs meant users would need to use the "Draft:" prefix instead)
